[package]
name = "agario_rust"
version = "0.1.0"
authors = ["Abdulfatah Kesibi <abdulfattah1994@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
anyhow = "1.0.42"
jsonrpc-core = "17.1.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
lazy_static = "1.4.0"
rand = "0.8.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio-tungstenite = "*"
futures-channel = "0.3"
url = "2.0.0"
env_logger = "0.7"
log = "0.4"
futures-util = { version = "0.3.16", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
tokio-stream = "0.1.7"
dotenv = "0.15.0"

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.7"

[dependencies.rustls]
optional = true
version = "0.19.0"

[dependencies.tokio-native-tls]
optional = true
version = "0.3.0"

[dependencies.tokio-rustls]
optional = true
version = "0.22.0"

[dependencies.webpki]
optional = true
version = "0.21.4"

[dependencies.webpki-roots]
optional = true
version = "0.21.0"

